--- a/awoyou/src/static/css/style.css
+++ b/awoyou/src/static/css/style.css
@@ -18,6 +18,7 @@ i,em{font-style: normal;}
 .fleft{float: left;}
 .fright{float: right;}
 .text-center{text-align: center;}
+.text-right{text-align: right;}
 .oh{overflow: hidden;}
 .light{color: #fff;}
 .color66{color: #666;}
@@ -55,7 +56,8 @@ i,em{font-style: normal;}
 .list li{border-bottom: 1px solid #ddd;overflow: hidden; height: 40px;line-height: 40px;}
 /*个人中心*/
 .title .btn{background-color: transparent;width:32px;height: 6px;border: none;}
-.title .pmore{background: url(../images/icon_more.png) no-repeat; background-size: contain;position: absolute;top: 50%;right:0;margin-top: -3px;}
+.title .pmore{background: url(../images/icon_more.png) no-repeat; background-size: contain;
+    position: absolute;top: 50%;right:0;margin-top: -3px;}
 .user-info{height: 126px;}
 .user-info .info img{height: 75px; text-align: center;}
 .user-info .leavl{background-color: #fe8eaf;padding:1px 7px;border-radius: 10px;}
@@ -67,20 +69,31 @@ i,em{font-style: normal;}
 .bgline{height: 30px; text-align: center; line-height:30px;position: relative;z-index: -9;}
 .bgline1{width: 200px;height: 1px;position: absolute;left: 50%;margin-left: -100px;background: #FE8EAF;top: 12px;z-index:-1;}
 .youlike{display: block;width:80px;height: 30px;background-color:#f5f5f5 ;z-index: 99;margin: 0 auto;}
+/*地址管理*/
 .address_del img{height: 15px;}
 .listadr li span{width: 95px;color: #686868;}
 .listadr li input{border: none;outline: none; width:250px;}
 .operate{position: absolute;bottom: 0;left: 0;}
 .operate span{width: 50%; overflow: hidden;}
+.title .pback{background: url(../images/back1.png) no-repeat; background-size: contain;
+    height: 18px;
+    width: 39px;
+    position: absolute;
+    top:13px;
+left:15px}
+/*优惠券*/
 .tabs a{display: block;float: left; width: 33.3%;height: 40px;color: #000; text-align: center;
 line-height: 40px;font-size: 15px;box-sizing: border-box}
-.active{color: #fe8eaf; border-bottom: 1px solid #FE8EAF;}
+
 .discount{width: 100%;height: 103px;background-image: url("../images/discount.png") ;background-size: 100% 100%}
-.order_tab li{height: 40px;line-height: 40px}
+/*我的订购*/
+.order_tab li{height: 40px;line-height: 39px}
 .goods_content img{float: left;height: 80px;}
 .forward{width: 7px;height: 15px;display: block;float: left; background-image: url(../images/forwards.png);background-size: cover}
 .btn_order{width: 88px; height: 30px;display: block;float: right;
     margin: 0 5px;line-height: 30px; -webkit-border-radius: 3px;-moz-border-radius: 3px;border-radius: 3px;}
+.myorder a{color: #000;width: 100%;display: block;}
+.myorder .active{color: #fe8eaf; border-bottom: 1px solid #FE8EAF;}
 /*支付成功*/
 .paytitle{
     border-bottom: 1px solid #bfbfbf;
