--- a/awoyou/src/static/css/style.css
+++ b/awoyou/src/static/css/style.css
@@ -28,6 +28,7 @@ i,em{font-style: normal;}
 .color00{color: #000;}
 .colored{color:#ff6565}
 .color33{color: #333;}
+.colorca{color: #cacaca;}
 .bgf5{background-color: #f5f5f5;}
 .bglight{background-color: #fff;}
 .bgdark{background-color: #393a3e;}
